# NLP_UCU

NLP/ASSIGNMENT1/: augment_data.py  baseline.ipynb  exp1.ipynb  exp2.ipynb  exp2.py  exp3.ipynb  exp4.py  exp4_vllm.ipynb  main.py  pyproject.toml
NLP/ASSIGNMENT1/src/: preprocessing.py  utils.py  wrapper.py
NLP/ASSIGNMENT2/: exp3.py  exp5.py  pyproject.toml  submission.csv  swap_columns.py
NLP/ASSIGNMENT2/data/: train.csv  train_balanced_augmented.csv  val.csv
