[project]
name = "ucu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "altair>=6.0.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.0",
    "ipykernel>=7.1.0",
    "nlpaug>=1.1.11",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "stanza>=1.11.0",
    "textattack>=0.3.10",
    "torch>=2.0.0",
    "transformers>=4.57.3",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
